--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
               <a href="#search">Search</a>
             </li>
             <li>
-              <a href="#popular">Popular Places</a>
+              <a href="#popular">Popular Places!!</a>
             </li>
             <li>
               <a href="#gallery">Gallery</a>
